Fix div widths and positions so things look right on Safari and Chrome.

--- a/htdocs/styles.css
+++ b/htdocs/styles.css
@@ -83,13 +83,13 @@ html body {
     position:absolute;
     top:1040px;
     left:28px;
-    width:380px;
+    width:390px;
 }
 
 #region7 {
     position:absolute;
     top:945px;
-    left:435px;
+    left:440px;
     width:380px;
 }
 
